--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ rebasi/public/photos/1547655628.jpg
 rebasi/public/photos/1547655319.jpg
 rebasi/publicphotos/1547653200.jpg/phpD15D.tmp
 rebasi/publicphotos/1547653149.jpg/php959.tmp
+*.jpg
